Addressing Sean comments. Mainly refactored some of the code and added javadoc.